--- a/simplelooter.fxml
+++ b/simplelooter.fxml
@@ -53,111 +53,109 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scripts.aLooter.gui.Controller">
-  <children>
-    <MenuBar prefHeight="25.0" prefWidth="627.0" VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem fx:id="MenuLoad" mnemonicParsing="false" text="Load" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem fx:id="MenuSave" mnemonicParsing="false" text="Save" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem fx:id="MenuQuit" mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" text="TRiBot Thread" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="271.0" prefWidth="484.0" VBox.vgrow="ALWAYS">
-         <children>
-            <Accordion prefHeight="375.0" prefWidth="640.0">
-              <panes>
-                <TitledPane animated="false" prefHeight="346.0" prefWidth="640.0" text="Main settings">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="299.0" prefWidth="646.0">
-                           <children>
-                              <JFXToggleButton fx:id="LootItemToggleButton" layoutX="13.0" layoutY="3.0" text="Loot if value is more than" />
-                              <Spinner fx:id="LootItemSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="19.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
-		
-                              <TextField fx:id="LootItemTextField" editable="true" layoutX="225.0" layoutY="49.0" prefHeight="25.0" prefWidth="108.0" promptText="item name" />
-                            
-                              <JFXToggleButton fx:id="ActiveRoamToggleButton" layoutX="14.0" layoutY="121.0" text="Actively roam the area" />
-                              <JFXToggleButton fx:id="ReturnToIdleToggleButton" layoutX="13.0" layoutY="192.0" text="Return to idle area " />
-                              <JFXCheckBox fx:id="CustomRoamTimeCheckBox" layoutX="28.0" layoutY="170.0" text="Custom roam timer (secs)" />
-                              <Spinner fx:id="CustomRoamTimeSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="167.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
-                              <JFXCheckBox fx:id="EmergencyTeleportCheckBox" layoutX="28.0" layoutY="267.0" text="Emegency teleport if we cannot reach our waiting tile" />
-                              <JFXCheckBox fx:id="CustomIdleAreaTimerCheckBox" layoutX="28.0" layoutY="240.0" text="Custom idle area timer" />
-                              <Spinner fx:id="CustomIdleAreaTimerSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="237.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
-                              <Button fx:id="StartScriptButton" layoutX="413.0" layoutY="116.0" mnemonicParsing="false" onAction="#startScriptButtonPressed" prefHeight="69.0" prefWidth="149.0" text="Start script" />
-                              <Spinner fx:id="BankOverSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="94.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
-                              <JFXCheckBox fx:id="LootItemCheckBox" layoutX="28.0" layoutY="50.0" prefHeight="23.0" prefWidth="187.0" text="Only loot specific item name" />
-                              <JFXCheckBox fx:id="BankOverValueCheckBox" layoutX="28.0" layoutY="98.0" prefHeight="0.0" prefWidth="93.0" text="Bank if we have over set coins" />
-                              <JFXCheckBox fx:id="SpamClickCheckBox" layoutX="28.0" layoutY="74.0" text="Spam click mode" />
-                           </children>
-                        </AnchorPane>
-                  </content>
-                </TitledPane>
-                <TitledPane animated="false" text="Location settings">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <ChoiceBox fx:id="LocationChoiceBox" layoutX="244.0" layoutY="43.0" prefWidth="150.0" />
-                              <Label layoutX="249.0" layoutY="20.0" text="Preset and saved locations" />
-                              <Spinner fx:id="CustomLootingRadiusSpinner" editable="true" initialValue="15" layoutX="95.0" layoutY="124.0" max="1000000" min="0" prefHeight="25.0" prefWidth="149.0" />
-                              <Spinner fx:id="CustomIdleRadiusSpinner" editable="true" initialValue="5" layoutX="394.0" layoutY="124.0" max="1000000" min="0" prefHeight="25.0" prefWidth="149.0" />
-                              <Label layoutX="111.0" layoutY="97.0" text="Custom looting radius" />
-                              <Label layoutX="415.0" layoutY="97.0" text="Custom idle radius" />
-                              <Button fx:id="SetIdleAreaButton" layoutX="428.0" layoutY="178.0" mnemonicParsing="false" onAction="#setIdleAreaPressed" text="Set idle area" />
-                              <Button fx:id="SetLootingAreaButton" layoutX="120.0" layoutY="178.0" mnemonicParsing="false" onAction="#setLootingAreaPressed" text="Set looting area" />
-                           </children>
-                        </AnchorPane>
-                  </content>
-                </TitledPane>
-                <TitledPane animated="false" prefHeight="368.0" prefWidth="634.0" text="Combat and Idle settings">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <GridPane layoutX="35.0" layoutY="29.0" prefHeight="217.0" prefWidth="531.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="390.0" minWidth="10.0" prefWidth="283.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="0.0" prefWidth="101.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="10.0" prefWidth="150.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <CheckBox fx:id="RequireExactCheckBox" mnemonicParsing="false" prefHeight="17.0" prefWidth="334.0" text="Require exact inventory and gear we start with" />
-                                    <CheckBox fx:id="AttackNPCCheckBox" mnemonicParsing="false" text="Attack npcs that attack us" GridPane.rowIndex="1" />
-                                    <CheckBox fx:id="TeleportCheckBox" mnemonicParsing="false" text="Teleport if we are under attack" GridPane.rowIndex="4" />
-                                    <CheckBox fx:id="UseFoodCheckBox" mnemonicParsing="false" text="Use food/Jugs of wine" GridPane.rowIndex="3" />
-                                    <CheckBox fx:id="WorldHopCheckBox" mnemonicParsing="false" text="Worldhop while waiting for respawn" GridPane.rowIndex="6" />
-                                    <CheckBox fx:id="StopOnDeathCheckBox" mnemonicParsing="false" text="Stop script if we die" GridPane.rowIndex="10" />
-                                    <CheckBox fx:id="ItemIsObjectCheckBox" mnemonicParsing="false" prefWidth="109.0" text="Item is an object" GridPane.rowIndex="9" />
-                                    <CheckBox mnemonicParsing="false" text="Use quickprayers near aggressive enemies" GridPane.rowIndex="2" />
-                                    <CheckBox mnemonicParsing="false" text="High alch specific loot" GridPane.rowIndex="7" />
-                                 </children>
-                              </GridPane>
-                           </children></AnchorPane>
-                  </content>
-                </TitledPane>
-              </panes>
-            </Accordion>
-         </children>
-    </AnchorPane>
-  </children>
+    <children>
+        <MenuBar prefHeight="25.0" prefWidth="627.0" VBox.vgrow="NEVER">
+            <menus>
+                <Menu mnemonicParsing="false" text="File">
+                    <items>
+                        <MenuItem fx:id="MenuLoad" mnemonicParsing="false" text="Load" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem fx:id="MenuSave" mnemonicParsing="false" text="Save" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem fx:id="MenuQuit" mnemonicParsing="false" text="Quit" />
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="TRiBot Thread" />
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+        <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="271.0" prefWidth="484.0" VBox.vgrow="ALWAYS">
+            <children>
+                <Accordion prefHeight="375.0" prefWidth="640.0">
+                    <panes>
+                        <TitledPane animated="false" prefHeight="346.0" prefWidth="640.0" text="Main settings">
+                            <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="299.0" prefWidth="646.0">
+                                    <children>
+                                        <JFXToggleButton fx:id="LootItemToggleButton" layoutX="13.0" layoutY="3.0" text="Loot if value is more than" />
+                                        <Spinner fx:id="LootItemSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="19.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
+
+                                        <TextField fx:id="LootItemTextField" editable="true" layoutX="225.0" layoutY="49.0" prefHeight="25.0" prefWidth="108.0" promptText="item name" />
+
+                                        <JFXToggleButton fx:id="ActiveRoamToggleButton" layoutX="15.0" layoutY="156.0" text="Actively roam the idle area" />
+                                        <JFXCheckBox fx:id="CustomRoamTimeCheckBox" layoutX="28.0" layoutY="206.0" text="How often to move (in seconds)" />
+                                        <Spinner fx:id="CustomRoamTimeSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="203.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
+                                        <JFXCheckBox fx:id="EmergencyTeleportCheckBox" layoutX="28.0" layoutY="235.0" text="Emegency escape if we cannot reach our idle tile" />
+                                        <Button fx:id="StartScriptButton" layoutX="413.0" layoutY="116.0" mnemonicParsing="false" onAction="#startScriptButtonPressed" prefHeight="69.0" prefWidth="149.0" text="Start script" />
+                                        <Spinner fx:id="BankOverSpinner" editable="true" initialValue="100" layoutX="225.0" layoutY="94.0" max="1000000" min="0" prefHeight="25.0" prefWidth="108.0" />
+                                        <JFXCheckBox fx:id="LootItemCheckBox" layoutX="28.0" layoutY="50.0" prefHeight="23.0" prefWidth="187.0" text="Only loot specific item name" />
+                                        <JFXCheckBox fx:id="BankOverValueCheckBox" layoutX="28.0" layoutY="98.0" prefHeight="0.0" prefWidth="93.0" text="Bank if we have over set coins" />
+                                        <JFXCheckBox fx:id="SpamClickCheckBox" layoutX="28.0" layoutY="74.0" text="Spam click mode" />
+                                        <JFXCheckBox layoutX="28.0" layoutY="119.0" text="Attempt to wait by first item that we picked up" />
+                                    </children>
+                                </AnchorPane>
+                            </content>
+                        </TitledPane>
+                        <TitledPane animated="false" text="Location settings">
+                            <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                        <ChoiceBox fx:id="LocationChoiceBox" layoutX="244.0" layoutY="43.0" prefWidth="150.0" />
+                                        <Label layoutX="249.0" layoutY="20.0" text="Preset and saved locations" />
+                                        <Spinner fx:id="CustomLootingRadiusSpinner" editable="true" initialValue="15" layoutX="95.0" layoutY="124.0" max="1000000" min="0" prefHeight="25.0" prefWidth="149.0" />
+                                        <Spinner fx:id="CustomIdleRadiusSpinner" editable="true" initialValue="5" layoutX="394.0" layoutY="124.0" max="1000000" min="0" prefHeight="25.0" prefWidth="149.0" />
+                                        <Label layoutX="111.0" layoutY="97.0" text="Custom looting radius" />
+                                        <Label layoutX="415.0" layoutY="97.0" text="Custom idle radius" />
+                                        <Button fx:id="SetIdleAreaButton" layoutX="428.0" layoutY="178.0" mnemonicParsing="false" onAction="#setIdleAreaPressed" text="Set idle area" />
+                                        <Button fx:id="SetLootingAreaButton" layoutX="120.0" layoutY="178.0" mnemonicParsing="false" onAction="#setLootingAreaPressed" text="Set looting area" />
+                                    </children>
+                                </AnchorPane>
+                            </content>
+                        </TitledPane>
+                        <TitledPane animated="false" prefHeight="368.0" prefWidth="634.0" text="Combat and Idle settings">
+                            <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                        <GridPane layoutX="35.0" layoutY="29.0" prefHeight="217.0" prefWidth="531.0">
+                                            <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="390.0" minWidth="10.0" prefWidth="283.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="0.0" prefWidth="134.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="10.0" prefWidth="115.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                            <children>
+                                                <CheckBox fx:id="RequireExactCheckBox" mnemonicParsing="false" prefHeight="17.0" prefWidth="334.0" text="Require exact inventory and gear we start with" />
+                                                <CheckBox fx:id="AttackNPCCheckBox" mnemonicParsing="false" text="Attack npcs that attack us" GridPane.rowIndex="1" />
+                                                <CheckBox fx:id="TeleportCheckBox" mnemonicParsing="false" text="Teleport if we are under attack" GridPane.rowIndex="4" />
+                                                <CheckBox fx:id="UseFoodCheckBox" mnemonicParsing="false" text="Use food/Jugs of wine" GridPane.rowIndex="3" />
+                                                <CheckBox fx:id="WorldHopCheckBox" mnemonicParsing="false" text="Worldhop while waiting for respawn" GridPane.rowIndex="6" />
+                                                <CheckBox fx:id="StopOnDeathCheckBox" mnemonicParsing="false" text="Stop script if we die" GridPane.rowIndex="10" />
+                                                <CheckBox fx:id="ItemIsObjectCheckBox" mnemonicParsing="false" prefWidth="109.0" text="Item is an object" GridPane.rowIndex="9" />
+                                                <CheckBox fx:id="UsePrayerCheckBox" mnemonicParsing="false" text="Use prayers near enemies" GridPane.rowIndex="2" />
+                                                <CheckBox fx:id="HighAlchLoot" mnemonicParsing="false" text="High alch specific loot" GridPane.rowIndex="7" />
+                                            </children>
+                                        </GridPane>
+                                    </children></AnchorPane>
+                            </content>
+                        </TitledPane>
+                    </panes>
+                </Accordion>
+            </children>
+        </AnchorPane>
+    </children>
 </VBox>
